feat: escala o otimizador para instituições grandes (turno por curso, geração por curso, co-docência, salas, diagnóstico) e drag-and-drop na grade
Otimizador e API:
- Turno obrigatório por curso (hard): Course.allowedShift restringe as
  ofertas daquele curso a um turno via poda de variáveis no solver —
  diferente do "priorizar turno" (S5) já existente, que é global e soft.
- Geração de grade escopada por curso: Schedule.course opcional permite
  gerar/regenerar a grade de um único curso, respeitando automaticamente
  as grades já ativas dos outros cursos (entram como locks no solver).
- Co-docência por disciplina: Subject.supportsCoTeaching relaxa a
  restrição de professor único (C2) só para as ofertas daquela
  disciplina, permitindo mais de um professor ao longo do semestre.
- Tipos de sala mais ricos (AUDITORIUM, COMPUTER_LAB) e campo de
  localização (Classroom.building).
- Limite de tempo do solver configurável por requisição, e diagnóstico
  de inviabilidade mais claro (distingue "estourou o tempo" de
  "comprovadamente inviável").
- C16/C17: estabilidade diária de sala e contiguidade diária da mesma
  oferta viram restrições hard no solver (antes eram só preferências).

Frontend:
- Grade horária ganha drag-and-drop nativo por pointer events (arrastar
  aula para outro horário/dia), com preview ao vivo da troca.
- Erro de troca de horário inválida agora aparece num card dedicado
  (com X e botão "Ok"), em vez de texto solto no topo da página.
- Formulários de curso, disciplina e sala atualizados para os novos
  campos (turno obrigatório, co-docência, tipo de sala, prédio).

Migrações V14-V17 (allowed_shift, schedule.course_id, classroom.building,
subject.supports_co_teaching) e testes novos no otimizador (Python) e na
API (Java) cobrindo cada restrição nova.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>